[gd_scene load_steps=19 format=3 uid="uid://bqpkv8hngsult"]

[ext_resource type="Script" path="res://enemies/fungus_lord.gd" id="1_d5ltm"]
[ext_resource type="Shader" path="res://art/midModulate.gdshader" id="2_hi1lo"]
[ext_resource type="Texture2D" uid="uid://brhcnunxpoq12" path="res://art/boss1.png" id="3_cdkic"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rb8pq"]
shader = ExtResource("2_hi1lo")
shader_parameter/modulate = Vector4(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwq1x"]
atlas = ExtResource("3_cdkic")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3btnm"]
atlas = ExtResource("3_cdkic")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v01mb"]
atlas = ExtResource("3_cdkic")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mupqw"]
atlas = ExtResource("3_cdkic")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2p8s"]
atlas = ExtResource("3_cdkic")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0eici"]
atlas = ExtResource("3_cdkic")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4bpfp"]
atlas = ExtResource("3_cdkic")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtw1o"]
atlas = ExtResource("3_cdkic")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pskq8"]
atlas = ExtResource("3_cdkic")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctejb"]
atlas = ExtResource("3_cdkic")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdsw5"]
atlas = ExtResource("3_cdkic")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_isqa2"]
atlas = ExtResource("3_cdkic")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_pepir"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_vwq1x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3btnm")
}],
"loop": false,
"name": &"attack",
"speed": 3.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_v01mb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mupqw")
}],
"loop": false,
"name": &"hit",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2p8s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0eici")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bpfp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtw1o")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pskq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctejb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdsw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_isqa2")
}],
"loop": true,
"name": &"walking",
"speed": 7.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_d74yh"]
radius = 12.0
height = 56.0

[node name="FungusLord" type="CharacterBody2D"]
z_as_relative = false
scale = Vector2(1.5, 1.5)
collision_layer = 8388610
collision_mask = 3
floor_stop_on_slope = false
script = ExtResource("1_d5ltm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_rb8pq")
sprite_frames = SubResource("SpriteFrames_pepir")
animation = &"attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_d74yh")

[node name="MoveTimer" type="Timer" parent="."]
autostart = true

[node name="RangeTimer" type="Timer" parent="."]

[node name="MeleeTimer" type="Timer" parent="."]

[node name="AlertTimer" type="Timer" parent="."]

[node name="NavTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 15.0
one_shot = true

[node name="AddTimer" type="Timer" parent="."]
one_shot = true

[node name="ClearShot" type="RayCast2D" parent="."]
collision_mask = 2048
collide_with_areas = true

[node name="HealthBar" type="TextureRect" parent="."]
offset_left = -32.0
offset_top = -41.0
offset_right = 32.0
offset_bottom = -33.0
stretch_mode = 2

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="RangeTimer" to="." method="_on_range_timer_timeout"]
[connection signal="timeout" from="MeleeTimer" to="." method="_on_melee_timer_timeout"]
[connection signal="timeout" from="AlertTimer" to="." method="_on_alert_timer_timeout"]
[connection signal="timeout" from="NavTimer" to="." method="_on_nav_timer_timeout"]
[connection signal="timeout" from="AddTimer" to="." method="_on_add_timer_timeout"]
